# pico-example

./: CMakeLists.txt
uart/hello_uart/: hello_uart.c
ztest/: CMakeLists.txt  ztest.c
